feat: avoid robots-indexing for documentation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="3; url=https://github.com/DGS-Development" />
     <title>Redirecting...</title>
+    <meta name="robots" content="noindex">
 </head>
 <body>
     <h1>Redirecting to "https://github.com/DGS-Development" ...</h1>
